# comfyUI-Realtime-Lora

./: README.md  __init__.py  model_diff_to_lora.py  pyproject.toml  selective_lora_loader.py
web/js/: dynamic_inputs.js
workflows/: Lora Analysis and Block Control Demo - Z-Image.json  Lora Analysis and Block Control Demo- ADVANCED - Z-Image.json  SDXLDemo.json  Z-ImageTurbo_demo.json
workflows/Lora Analysis, Block and Model Editing/: Save Lora from Multiple Editors Demo.json
