[project]
name = "comfyui-realtime-lora"
description = "Train, analyze, selectively load, and extract/merge LoRAs inside ComfyUI. Supports Z-Image, Qwen Image, Qwen Image Edit, SDXL, FLUX, FLUX Klein, Wan 2.2, and SD 1.5. Model Diff to LoRA node for merging and compressing LoRAs. Image of the day node, Clippy Reloaded clipboard loader."
version = "2.1.0"
license = "MIT"
authors = [
    { name = "Peter Neill" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/ShootTheSound/comfyUI-Realtime-Lora"
Repository = "https://github.com/ShootTheSound/comfyUI-Realtime-Lora"
Issues = "https://github.com/ShootTheSound/comfyUI-Realtime-Lora/issues"

[tool.comfy]
PublisherId = "shootthesound"
DisplayName = "-realtime-lora"
Icon = ""
